Innitial uncommited changes

--- a/layout/theme.light.liquid
+++ b/layout/theme.light.liquid
@@ -237,9 +237,7 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
 </script>
 <!-- DO NOT MODIFY -->
 <!-- End Reddit Pixel -->
-  
-  
-  <!-- DV 09/07/21 Yandex.Metrika counter -->
+    <!-- DV 09/07/21 Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
@@ -261,13 +259,9 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
 
   <div id="shopify-section-header" class="shopify-section">
     <style>
-      
-      
-      
       .notification-bar {
         background-color: ;
       }
-    
       .notification-bar__message {
         color: ;
       }
@@ -280,15 +274,9 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
       .mobile_header_logo img{
         width:35%!important;
       }
-      
-    
-    
       .desktop_header_logo img{
         width:90%!important;
       }
-      
-    
-      
       .site-header__logo-image {
         margin: 0;
       }
@@ -329,22 +317,11 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
                          >
                   </noscript>
                 </a>
-    
-    
-                
-                
               </div>
-            
-    
-            
               <div class="h2 site-header__logo medium-up--hide" itemscope="" itemtype="http://schema.org/Organization">
-                
-                
-    <a href="/" itemprop="url" class="mobile_header_logo site-header__logo-image">
-                  
+                <a href="/" itemprop="url" class="mobile_header_logo site-header__logo-image">
                   <img class="lazyload js" src="//cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_300x300.png?v=1597744737" data-src="//cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_{width}x.png?v=1597744737" data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]" data-aspectratio="1.5390625" data-sizes="auto" alt="Unidragon">
                   <noscript>
-                    
                     <img src="//cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_300x.png?v=1597744737"
                          srcset="//cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_300x.png?v=1597744737 1x, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_300x@2x.png?v=1597744737 2x"
                          alt="Unidragon"
@@ -352,29 +329,10 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
                          >
                   </noscript>
                 </a>
-    
-                
-                    
                   </div>
-                 
               </div>
-    
-             
-              
-    
               <div class="grid__item small--two-tenths medium-up--onehalf right_side text-right site-header__icons site-header__icons--plus">
                 <div class="site-header__icons-wrapper">
-    
-                  
-                  <button type="button" class="small--hide btn--link site-header__search-toggle js-drawer-open-top" aria-controls="SearchDrawer" aria-expanded="false">
-                    
-    <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-search" viewBox="0 0 50 40"><path d="M35.6 36l-9.8-9.8c4.1-5.4 3.6-13.2-1.3-18.1-5.4-5.4-14.2-5.4-19.7 0-5.4 5.4-5.4 14.2 0 19.7 2.6 2.6 6.1 4.1 9.8 4.1 3 0 5.9-1 8.3-2.8l9.8 9.8c.4.4.9.6 1.4.6s1-.2 1.4-.6c.9-.9.9-2.1.1-2.9zm-20.9-8.2c-2.6 0-5.1-1-7-2.9-3.9-3.9-3.9-10.1 0-14C9.6 9 12.2 8 14.7 8s5.1 1 7 2.9c3.9 3.9 3.9 10.1 0 14-1.9 1.9-4.4 2.9-7 2.9z"></path></svg>
-                    <span class="icon__fallback-text">Search</span>
-                  </button>
-                  
-                  <a href="/account/login" class="site-header__account small--hide">
-                    <span class="sign_in">SIGN IN</span>
-                  </a>
                   <a href="/cart" class="site-header__cart head_cart">
                     <i class="fas head-crt-icon fa-shopping-cart"></i>
                     <span class="visually-hidden">Cart</span>
@@ -383,16 +341,11 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
                         <span>{{ cart.item_count }}</span>
                     </div><span class="commom_colord" id="CartCost" data-discount="{{discount_calc}}">{{ cart.total_price | money }}</span>
                   </a>
-                  
                 </div>
-    
               </div>
               </div>
             </header>
-    
     </div>
-    
-    
     </div>
 
   <div class="page-container" id="PageContainer">
@@ -400,11 +353,8 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
       {{ content_for_layout }}
       {%if template == 'index'%}<div class="reputon-trustpilot-reviews-widget" id="78c456a0-bc54-11eb-910a-479bd9607d41" ></div>{%endif%}
     </main>
-    
-    
-    <div id="shopify-section-footer" class="shopify-section footer-section">
-
-        <footer class="site-footer" role="contentinfo">
+   <div id="shopify-section-footer" class="shopify-section footer-section">
+       <footer class="site-footer" role="contentinfo">
           <div class="page-width">
             <div class="grid grid--no-gutters">
               
@@ -414,14 +364,23 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
                       
                       <style>
                         .footer_logo-1 .desktop_logo img{
-                          width:50%;
+                          width:30%;
+                        }
+                        .toggle_content {
+                            text-align: right;
+                        }
+                        .toggle_content li {
+                            display: inline;
+                        }
+                        .toggle_content a {
+                            color: grey;
+                        }
+                        .toggle_content li:nth-child(4) {
+                            display: none;
                         }
                       </style>
                       <ul class="footer_logo-1">
-                        
-                          <div class="h2 site-header__logo" itemscope="" itemtype="http://schema.org/Organization">
-                            
-                            
+                        <div class="h2 site-header__logo" itemscope="" itemtype="http://schema.org/Organization">
         <a href="/" itemprop="url" class="desktop_logo site-header__logo-image">
                               
                               <img class="js lazyautosizes lazyloaded" src="//cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_300x300.png?v=1597744737" data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]" data-aspectratio="1.5390625" data-sizes="auto" alt="Unidragon" data-srcset="//cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_180x.png?v=1597744737 180w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_360x.png?v=1597744737 360w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_540x.png?v=1597744737 540w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_720x.png?v=1597744737 720w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_900x.png?v=1597744737 900w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_1080x.png?v=1597744737 1080w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_1296x.png?v=1597744737 1296w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_1512x.png?v=1597744737 1512w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_1728x.png?v=1597744737 1728w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_2048x.png?v=1597744737 2048w" sizes="177px" srcset="//cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_180x.png?v=1597744737 180w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_360x.png?v=1597744737 360w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_540x.png?v=1597744737 540w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_720x.png?v=1597744737 720w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_900x.png?v=1597744737 900w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_1080x.png?v=1597744737 1080w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_1296x.png?v=1597744737 1296w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_1512x.png?v=1597744737 1512w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_1728x.png?v=1597744737 1728w, //cdn.shopify.com/s/files/1/0291/1322/1168/files/unidragon-logo-shopify-2_2048x.png?v=1597744737 2048w">
@@ -434,45 +393,29 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
                                      >
                               </noscript>
                             </a>
-                            
-                            
-                          </div>
-                        
-        
-        
+                        </div>
                       </ul>
-                     
                     </div>
                 </div>
-                <div class="grid__item seaction_gape medium-up--one-third">
-                    <div class="footer_menu site-footer__linklist">
-                        <h5 class="footer_title">INFORMATION</h5>
+              
+                <div class="grid__item seaction_gape medium-up--two-thirds">
+                    <div class="footer_content">
+                        <div class="toggle_content">
+                          <p>&nbsp;©&nbsp;2020 RUSARD US&nbsp;Inc.</p><p><strong>All</strong> <strong>rights</strong> <strong>reserved.</strong></p>
+                        </div> 
                         <div class="toggle_content">
                           <ul>
-                              <li><a href="/pages/refund-policy">Refund Policy</a></li>
-                              <li><a href="/pages/shipping">Shipping</a></li>
-                              <li><a href="/pages/payment-methods">Payment Methods</a></li>
-                              <li><a href="/pages/privacy-policy">Privacy Policy</a></li>
+                              <li><a href="/pages/refund-policy">Refund Policy</a> | </li>
+                              <li><a href="/pages/privacy-policy">Privacy Policy</a> | </li>
                               <li><a href="/pages/terms-of-service">Terms of Service</a></li>
                           </ul>
                         </div>
                     </div>
                 </div>
-              
-                <div class="grid__item seaction_gape medium-up--one-third">
-                    <div class="footer_content">
-                        <div class="toggle_content">
-                          <p>&nbsp;©&nbsp;2020 RUSARD US&nbsp;Inc.</p><p><strong>All</strong> <strong>rights</strong> <strong>reserved.</strong></p>
-                        </div>  
-                    </div>
-                </div>
             </div>
           </div>
         </footer>
-      
         </div>
-
-
   </div>
 
     {{ 'fontawesome.css' | asset_url | stylesheet_tag }}
@@ -481,6 +424,7 @@ t.parentNode.insertBefore(y,t);y.onerror=function(){s()};
   {{ 'shop.js' | asset_url | script_tag }}  
 
   {{ '//cdn.shopify.com/s/files/1/0194/1736/6592/t/1/assets/booster-page-speed-optimizer.js?23' | script_tag }}
+  <link href="https://fonts.googleapis.com/css?family=Anton|Arimo|Arvo|Baloo+Bhai|Baloo+Bhaina|Bitter|Bree+Serif|Cabin|Catamaran|David+Libre|Dosis|Droid+Sans|Droid+Serif|Ek+Mukta|Fjalla+One|Hind|Inconsolata|Indie+Flower|Lato|Libre+Baskerville|Lobster|Lora|Merriweather|Modak|Montserrat|Muli|Noto+Sans|Noto+Serif|Nunito|Open+Sans|Open+Sans+Condensed:300|Oswald|Oxygen|PT+Sans|PT+Sans+Narrow|PT+Serif|Pavanam|Playfair+Display|Poppins|Raleway|Roboto|Roboto+Condensed|Roboto+Slab|Slabo+27px|Source+Sans+Pro|Teko|Titillium+Web|Ubuntu|Yanone+Kaffeesatz|Yatra+One" rel="stylesheet">
 
  <!-- KV 03/03/21 Twitter universal website tag code -->
 <script>
