--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -860,7 +860,7 @@
           <div class="banner-inspirational-gift">
             <div class="banner-inspirational-gift_header">Inspirational Gift</div>
             <div class="banner-inspirational-gift_text">Bring more happiness into the life of your loved ones by choosing a gift that is unforgettable experience.</div>
-            <div class="banner-inspirational-gift_link"><a href="/products/giftcard" class="banner-inspirational-gift_a">buy gift card -></a></div>
+            <div class="banner-inspirational-gift_link"><a href="/products/giftcard" class="banner-inspirational-gift_a">{{ 'custome_text.banner.buy_gift_card' | t }} -></a></div>
           </div>
           <div class="advantage">
             <div class="advantage-item">
@@ -908,7 +908,7 @@
           <div class="banner-decorate-walls">
             <div class="banner-decorate-walls_header">DECORATE THE WALLS OF YOUR HOME</div>
             <div class="banner-decorate-walls_text">You can decorate the interior with puzzles and our special mounting system</div>
-            <div class="banner-decorate-walls_howitworks"><a id="annoncment-banner-link" href="#upsell-anoncment-popup" style="text-decoration: underline;font-weight: 600;font-size: 14px;color: #292929;" class="upsell-anoncment-popup">see how it works -></a></div>
+            <div class="banner-decorate-walls_howitworks"><a id="annoncment-banner-link" href="#upsell-anoncment-popup" style="text-decoration: underline;font-weight: 600;font-size: 14px;color: #292929;" class="upsell-anoncment-popup">{{ 'custome_text.banner.see_how_it_works' | t }} -></a></div>
           </div>
 
           <div class="product-single__description rte" itemprop="description">
@@ -934,11 +934,11 @@
                 {{ product.description }}
 
               </div>
-              <div id="see-more">See more &#709;</div>
+              <div id="see-more">{{ 'custome_text.button.see_more' | t }} &#709;</div>
               <script>$(document).ready(function () {
                       $('.description_spoiler').addClass('read-more');
                       $('#see-more').click(function () {
-                        if ($("#see-more")[0].innerHTML == 'See more ˅') {$("#see-more")[0].innerHTML = 'Read less &#708;'} else {$("#see-more")[0].innerHTML = 'See more &#709;'}
+                        if ($("#see-more")[0].innerHTML == "{{ 'custome_text.button.see_more' | t }} ˅") {$("#see-more")[0].innerHTML = "{{ 'custome_text.button.read_less' | t }} &#708;"} else {$("#see-more")[0].innerHTML = "{{ 'custome_text.button.see_more' | t }} &#709;"}
                         $('.read-more').toggleClass('active');
                       })
                     })
