--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -35,11 +35,10 @@
         height: 530px;
     }
     .videoframe iframe {
-        position: absolute;
-        top: 0;
+        margin-top: calc(50% - 145px);
         left: 0;
         width: 100%;
-        height: 100%;
+        height: 290px;
     }
     .video-media iframe {
         width: 100%;
@@ -63,6 +62,9 @@
         align-items: center;
       }
       @media only screen and (max-width: 749px) {
+        .thumbnails-wrapper.thumbnails-slider--active .slick-track {
+          display: block;
+      }
         .shipping-banner {min-height: 95px !important;}
         .thumbnails-wrapper {
             padding-bottom: 60px;
@@ -496,7 +498,8 @@
                     <li class="grid__item {% unless enable_thumbnail_slides == true %}{{ product_thumbnail_width }} {% endunless %}{% if product.images.size > 1 %}product-single__thumbnails-item{% endif %} js">
                     {%comment%}{{ media | external_video_tag }}{%endcomment%}
                       <a href="#" class="text-link product-single__thumbnail product-single__thumbnail--{{ section.id }}" data-thumbnail-id="{{ video.id }}" {% if enable_zoom %}data-zoom="{{ video.src | img_url: product_image_zoom_size, scale: product_image_scale }}"{% endif %}>
-                        <div class="product-single__thumbnail-image medium-up--hide video-media" style="height:340px;display: flex;align-items: center;justify-content: center;">{{ video | external_video_tag }}</div>
+                        <div class="product-single__thumbnail-image medium-up--hide video-media" style="height:230px;display: flex;align-items: center;justify-content: center;">{{ video | external_video_tag }}</div>
+                        <img src="{{ 'play-button.png' | asset_img_url: '50x' }}" style="position: fixed; margin: 0 auto; top: 25%; left: 55px;" />
                         <img loading="lazy" class="product-single__thumbnail-image small--hide" src="{{ video.preview_image | img_url: 'compact' }}" alt="{{ video.alt | escape }}">                            
                       </a>
                     </li>
