Subscription functional added

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -567,7 +567,7 @@
                         endif
                       endfor
                     endif
-                    if member_discount == true and item.product.type == 'Puzzle'
+                    if member_discount == true
                       assign item_line_price = item.line_price | times: 0.8
                       assign discount_calc = 0.8
                     elsif puzle_discount > 2
