--- a/snippets/size-block.liquid
+++ b/snippets/size-block.liquid
@@ -89,6 +89,7 @@
   
   
   <style>
+    .pp-label, .sm-text, .pp-label, .puzzle-pieces, .puzzle-size {text-align: center;}
     .size.one-whole {
       background: #ff862d;
       line-height: 15px;
