--- a/snippets/swatch-gift.liquid
+++ b/snippets/swatch-gift.liquid
@@ -26,7 +26,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
       {% endif %}
     {% endif %}
   {% endfor %}
-
+ 
   {% unless found_option %}
   <div class="swatch error">
     <p><ly-as-16902712>You included the snippet swatch.liquid with the name of a product option —</ly-as-16902712> <code>'{{ swatch }}'</code> <ly-as-16902713>— that does not belong to your product.</ly-as-16902713></p>
@@ -66,10 +66,14 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
           </div>
           <div class="sw_content_outer">
             <div class="sw_var_price">
-              {% if variant.compare_at_price > variant.price %}
-              <span class="sw_com_price">{{variant.compare_at_price | money }}</span>
+              {%- if variant.compare_at_price > variant.price -%}
+                {%- if discount_amount < 1 -%}
+                  <span class="sw_com_price">{{variant.price | money }}</span>
+                {%- else -%}
+                  <span class="sw_com_price">{{variant.compare_at_price | money }}</span>
+                {% endif %}
               {% endif %}
-              <span class="sw_m_price">{{variant.price | money }}</span>
+              <span class="sw_m_price">{{variant.price | times: discount_amount | money }}</span>
             </div>
           </div>
           <img class="crossed-out" src="{% comment %}ly_asset_replace_for_[ 'soldout.png' | asset_url ]_begin{% endcomment %}{% assign ly_asset = 'soldout.png' %}{% include 'ly-asset' with ly_asset %}{{ ly_translation  }}{% comment %}ly_asset_replace_end{% endcomment %}" />
